# QuickConvert

./: .gitignore
backend/gateway/: go.mod  main.go
backend/gateway/proxy/: proxy.go
backend/go/: go.mod  go.sum  main.go
backend/go/img-x-converter/: handler.go  service.go
backend/go/lib/: lib.go
backend/go/pdfOps/: handler.go  service.go
backend/go/router/: router.go
backend/py/: pyproject.toml
backend/py/src/convert_service/: __init__.py
backend/pyservice/: pyproject.toml
backend/pyservice/convert_service/: main.py
backend/pyservice/convert_service/docx2pdf/: api.py  service.py
backend/pyservice/convert_service/health/: api.py
backend/pyservice/convert_service/pdf2jpg/: api.py  service.py
backend/pyservice/convert_service/utils/: file_ops.py  file_validation.py
frontend/QuickConvert/: package-lock.json  package.json
frontend/QuickConvert/app/: globals.css  page.tsx
