[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaustub Pavagada", email = "kaustubpm@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
py = "py:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
