[project]
name = "pyservice"
version = "0.1.0"
description = "Python microservice for conversions between various types of files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.6",
    "uvicorn[standard]>=0.38.0",
]
